site/resources/styles/checker.css
/* --- Variables --- */
:root {
	--main-content-width: 80ch;
	--thin-screen-width: 840px;
}

/* --- Headers --- */

h1,
h2,
h3,
h4,
h5,
h6 {
	color: var(--header-colour,#220029);
	border-bottom: 1px solid white;
	padding: 0.1ex;
	margin: 0.75rem 0;
	box-sizing: border-box;
	width: 100%;
	text-decoration: none;
	text-align: left;
	font-family: var(--header-font,inconsolata, monospace);
	transition: font-size 0.5s cubic-bezier(0, 0.5, 0.25, 1), font-weight 0.5s cubic-bezier(0, 0.5, 0.25, 1), font-stretch 0.5s cubic-bezier(0, 0.5, 0.25, 1);
}
h1 {
	background-color: rgba(255, 255, 255, 0.75);
	font-size: 4rem;
	font-weight: 750;
	font-stretch: 150%;
}

h2 {
	background-color:rgba(255, 255, 255, 0.5);
	font-size: 2.67rem;
	font-weight: 650;
	font-stretch: 137.5%;
}

h3 {
	background-color: rgba(255, 255, 255, 0.35);
	font-size: 2.2rem;
	font-weight: 550;
	font-stretch: 125%;
}

h4 {
	background-color: rgba(255, 255, 255, 0.2);
	font-size: 1.67rem;
	font-weight: 500;
	font-stretch: 112.5%;
}

h5 {
	background-color: rgba(255, 255, 255, 0.15);
	font-size: 1.5rem;
	font-weight: 450;
	font-stretch: 100%;
}

h6 {
	background-color: rgba(255, 255, 255, 0.1);
	font-size: 1.2rem;
	font-weight: 400;
	font-stretch: 100%;
}

/* Smaller headers on small screens*/
@media screen and (max-width: var(--thin-width-screen)) {
	h1 {
		font-size: 2.6rem;
		font-weight: 750;
		font-stretch: 135%;
	}

	h2 {
		font-size: 2.35rem;
		font-weight: 650;
		font-stretch: 125%;
	}

	h3 {
		font-size: 2rem;
		font-weight: 550;
		font-stretch: 112.5%;
	}

	h4 {
		font-size: 1.35rem;
		font-weight: 500;
		font-stretch: 100%;
	}

	h5 {
		font-size: 1.2rem;
		font-weight: 450;
		font-stretch: 100%;
	}

	h6 {
		font-size: 1rem;
		font-weight: 400;
		font-stretch: 100%;
	}
}

/* --- Text Styling --- */

body {
	font-family: var(--main-font,atkinson-hyperlegible, sans-serif);
	font-size: 1.2rem;
	text-align: left;
	color: var(--text-colour,#FFEAFC);
	transition: font-size 0.5s cubic-bezier(0, 0.5, 0.25, 1);
}

@media screen and (max-width: var(--thin-width-screen)) {
	body {
		font-size: 1rem;
	}
}

p,
ul,
ol,
fieldset > div {
	line-height: 1.5;
}

/* --- Link Styling --- */
a {
	border: none;
	color: var(--a-colour,#FF9EBC);
	text-decoration: none;
}

a:visited {
	color: var(--a-visited-colour,#FF7FAC);
}

a:hover {
	color: var(--a-hover-colour,#FBD1FF);
}

a:active {
	color: var(--a-active-colour,#FFFFFF);
}

a:not([nobrackets="true"]):not(#section-dropdown-sidebar > div.dropdown-content > span.dropdown-hider > a):hover,
a:not([nobrackets="true"]):not(#section-dropdown-sidebar > div.dropdown-content > span.dropdown-hider > a):active {
	text-decoration: underline;
}

a:not([nobrackets="true"]):not(#section-dropdown-sidebar > div.dropdown-content > span.dropdown-hider > a):not(.btn-secondary)::before {
	content: "[[";
	opacity: 0.7;
}
a:not([nobrackets="true"]):not(#section-dropdown-sidebar > div.dropdown-content > span.dropdown-hider > a):not(.btn-secondary)::after {
	content: "]]";
	opacity: 0.7;
}

a[target="_blank"]:not([nobrackets="true"]):not(#section-dropdown-sidebar > div.dropdown-content > span.dropdown-hider > a):not(btn-secondary)::before,
#section-dropdown-sidebar p > a::before {
	content: "[";
	opacity: 0.7;
}
a[target="_blank"]:not([nobrackets="true"]):not(#section-dropdown-sidebar > div.dropdown-content > span.dropdown-hider > a):not(btn-secondary)::after,
#section-dropdown-sidebar p > a::after {
	content: "]";
	opacity: 0.7;
}

a.keyboard-nav-link {
	position: absolute;
	left: -10000px;
	top: auto;
	width: 1px;
	height: 1px;
	overflow: hidden;
}

a.keyboard-nav-link:focus {
	position: static;
	left: 0;
	top: 0;
	width: auto;
	height: auto;
	overflow: auto;
}

a.keyboard-nav-link ~ #keyboard-nav-separator {
	visibility: hidden;
	position: absolute;
	left: -10000px;
	top: auto;
	width: 1px;
	height: 1px;
	overflow: hidden;
}

a.keyboard-nav-link:focus ~ #keyboard-nav-separator {
	visibility: visible;
	position: static;
	left: 0;
	top: 0;
	width: auto;
	height: auto;
	overflow: auto;
}

/* --- Background Gradient Pseudo-image --- */

body {
	background-color: var(--bg-checkerdark,#42004E);
	background-image: linear-gradient(to bottom left, transparent 0%, transparent 50%, var(--bg-triangle,#220029) 50%, var(--bg-triangle,#220029) 100%),
	linear-gradient(45deg, var(--bg-checkerlight,#680068) 25%, transparent 25%, transparent 75%, var(--bg-checkerlight,#680068) 75%, var(--bg-checkerlight,#680068)),
	linear-gradient(45deg, var(--bg-checkerlight,#680068) 25%, var(--bg-checkerdark,#42004E) 25%, var(--bg-checkerdark,#42004E) 75%, var(--bg-checkerlight,#680068) 75%, var(--bg-checkerlight,#680068));
	background-size: 100lvw 100lvh, 64px 64px, 64px 64px;
	background-position: 0 0, 32px 32px, 0 0;
	background-attachment: fixed, scroll, scroll;
}

/* --- Horizontal Rule --- */
hr {
	color: var(--hr-colour,var(--text-colour,#FF417D));
	display: block;
	border: none;
	height: 0;
	border-style: double;
}

span.hr-light {
	color: var(--tone-colour,#FFFFFF);
	display: block;
	border: 1px dotted;
	max-height: 1px;
	width: auto;
	box-sizing: border-box;
	margin-bottom: 1em;
	padding-left: 10%;
	padding-right: 10%;
}

/* --- Division & Span Styles --- */

span.code-inline {
	font-family: var(--monospace-font,fira-code, monospace);
	font-size: 1.2rem;
	background-color: var(--sidebar-colour,#1C0023);
	color: var(--text-colour,#FFEAFC);
	padding: 0.125rem;
}

div.code-block {
	font-family: var(--monospace-font,fira-code, monospace);
	font-size: 1.2rem;
	background-color: var(--sidebar-colour,#1C0023);
	color: var(--text-colour,#FFEAFC);
	padding: 0.25rem;
}

@media screen and (max-width: var(--thin-width-screen)) {
	span.code-inline,
	div.code-block {
		font-size: 1rem;
	}
}

span.post-list-title {
	font-size: 2rem;
}

span.small-text {
	font-size: 0.85rem;
}

/* --- Interjection boxes --- */

div.info,
div.warning,
div.deny,
div.urgent {
	margin: 1rem 7.5%;
	min-height: 5rem;
	box-sizing: border-box;
}
/* ... */

